--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-vector-icons": "^9.0.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
