feat: my courses page added

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-slider-box": "^1.1.14",
+    "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-vector-icons": "^9.0.0",
     "react-navigation": "^4.4.4"
