--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-global-datetimepicker": "^2.0.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-image-slider-box": "^1.1.14",
     "react-native-modal": "^13.0.0",
