--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-persian-jalali-calendar-picker": "^1.0.2",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-toast-notifications": "^3.2.3",
     "react-native-vector-icons": "^9.0.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.6",
