--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^3.10.2",
     "react-native-toast-notifications": "^3.2.3",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "^11.17.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
