--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-open-maps": "^0.4.0",
     "react-native-reanimated": "^2.3.1",
+    "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.10.2",
     "react-native-toast-notifications": "^3.2.3",
     "react-native-vector-icons": "^9.0.0",
