--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^6.3.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.0.11",
+    "formik": "^2.2.9",
     "moment-jalaali": "^0.9.4",
     "react": "17.0.2",
     "react-native": "0.66.4",
